feat: show OCR page totals
